# wai

crates/gen-wasmer/: Cargo.toml
crates/gen-wasmer/tests/: runtime.rs
