[package]
name = "wai-bindgen-gen-wasmer"
description = "Generate WAI glue code for a Rust Wasmer host"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wai-bindgen-gen-core = { path = "../gen-core", version = "0.2.3" }
wai-bindgen-gen-rust = { path = "../gen-rust", version = "0.2.3" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
test-helpers = { path = "../test-helpers", features = [
    "wai-bindgen-gen-wasmer",
] }

# Use current version of wai-bidgen-wasmer ⚠️ REVERT BEFORE MAKING A PULL REQUEST ⚠️
wai-bindgen-wasmer = { path = "../../../wasmer/lib/wai-bindgen-wasmer", default-features = false, features = ["tracing"] }
wasmer = { version = "3.0", default-features = false }
wasmer-wasi = { version = "3.0", default-features = false }

wasm-bindgen-test = { version = "0.3" } # TODO: dev dependencies cannot be optional

[features]
sys = ["wai-bindgen-wasmer/sys", "wasmer/sys-default", "wasmer-wasi/sys-default"]
js = ["wai-bindgen-wasmer/js", "wasmer/js-default", "wasmer-wasi/js-default"]
# js-test = ["js", "wasm-bindgen-test"]
